--- a/assembleTeam.html
+++ b/assembleTeam.html
@@ -17,8 +17,24 @@
 
     
   <link rel="stylesheet" href="stylesheet.css">
+
+  <style>
+  .circle {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #0d6efd; /* Bootstrap primary blue */
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 24px;
+    margin: 0 auto;
+  }
+</style>
     
-  <title>Scrum Poker | Welcome</title>
+  <title>Scrum Poker | Assemble Team</title>
 
 </head>
 <body>
@@ -28,32 +44,62 @@
   <p>Resize this responsive page to see the effect!</p>
 </div>
 
+<div class="progress">
+  <div class="progress-bar" role="progressbar" aria-valuenow="50"
+  aria-valuemin="0" aria-valuemax="100" style="width:50%">
+    ☑ Step 2
+  </div>
+</div>
+
 <div class="container">
-  <div class="row">
-    <!-- Full width centered text -->
-    <div class="col-12 text-center">
-      <h3>Full Width Row</h3>
-      <p>This row spans all columns on all screen sizes.</p>
+  <div class="row" id="teammate-grid">
+    <!-- Full width centered heading -->
+    <div class="col-12 text-center mb-4">
+      <h2>Teammates</h2>
     </div>
 
-    <!-- Following columns -->
-    <div class="col-6 col-md-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor..</p>
+    <!-- Product Owner row: spans 2 columns on small+ -->
+    <div class="col-12 col-sm-8 offset-sm-2 text-center mb-4">
+      <div class="circle mx-auto" id="po-circle">PO</div>
+      <p class="mt-2">Product Owner</p>
+
     </div>
-    <div class="col-6 col-md-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor..</p>
+
+    <!-- Teammate slots -->
+    <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
+      <!-- Teammate initials go here -->
     </div>
-    <div class="col-6 col-md-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor..</p>
-    </div>
+    <div class="col-6 col-md-4 d-flex justify-content-center mb-4"></div>
+    <div class="col-6 col-md-4 d-flex justify-content-center mb-4"></div>
+    <!-- Add more if needed -->
   </div>
+</div>
+
+<!-- <div class="text-center mb-4">
+  <button id="add-teammate-btn" class="btn btn-primary">Add Teammate</button>
+</div> -->
+
+<div class="container my-4 text-center">
+  <h3>Enter teammate initials</h3>
+  <input type="text" class="form-control form-control-sm d-inline-block" id="new-initials" 
+    maxlength="2" style="width: 60px; text-transform: uppercase;" placeholder="AB" 
+    oninput="this.value = this.value.replace(/[^a-zA-Z]/g, '')" required>
+  <button id="add-teammate-btn" class="btn btn-primary ml-2">Add Teammate</button>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+<!-- <script>
+  window.onload = function () {
+    const poInitials = localStorage.getItem('productOwnerInitials');
+    const poCircle = document.getElementById('po-circle');
+    if (poCircle) {
+      poCircle.textContent = poInitials;
+    }
+  };
+</script> -->
+
+<script type="module" src="team.js"></script>
 
 </body>
 </html>
