--- a/voting.html
+++ b/voting.html
@@ -38,19 +38,19 @@
   }
 </style>
     
-  <title>Scrum Poker | Assemble Team</title>
+  <title>Scrum Poker | Cast Your Votes!</title>
 
 </head>
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Assemble Your Team</h1>
-  <p>Resize this responsive page to see the effect!</p>
+  <h1>Cast your votes!</h1>
+  <p>The PO may change votes or kick teammates as discussed.</p>
 </div>
 
 <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="50"
-  aria-valuemin="0" aria-valuemax="100" style="width:50%">
+  <div class="progress-bar" role="progressbar" aria-valuenow="75"
+  aria-valuemin="0" aria-valuemax="100" style="width:75%">
     ☑ Step 2
   </div>
 </div>
@@ -62,40 +62,29 @@
       <h2>Teammates</h2>
     </div>
 
-    <div id="teammate-slots" class="row px-5">
-      <!--Product Owner Slot-->
-      <div class="col-12 col-sm-8 offset-sm-2 text-center mb-4">
+    <!-- Product Owner Slot -->
+    <div class="col-12 col-sm-8 offset-sm-2 text-center mb-4">
       <div class="circle po-circle mx-auto" id="po-circle">PO</div>
       <p class="mt-2">Product Owner</p>
-      </div>
-    <!-- Teammate slots. Icons go here -->
-      <div class="col-6 col-md-4 d-flex justify-content-center mb-4 teammate-slot"></div>
-      <div class="col-6 col-md-4 d-flex justify-content-center mb-4 teammate-slot"></div>
-      <div class="col-6 col-md-4 d-flex justify-content-center mb-4 teammate-slot"></div>
-      <div class="col-6 col-md-4 d-flex justify-content-center mb-4 teammate-slot"></div>
-      <div class="col-6 col-md-4 d-flex justify-content-center mb-4 teammate-slot"></div>
-      <div class="col-6 col-md-4 d-flex justify-content-center mb-4 teammate-slot"></div>
-      <!-- Add more if needed -->
+    </div>
+
+    <!-- Teammate slots container -->
+    <!-- This should NOT be a .row because it's already inside one -->
+    <div id="teammate-slots" class="d-flex flex-wrap justify-content-center px-5">
+      <!-- teammate circles will be appended here -->
     </div>
   </div>
 </div>
 
-<div class="container my-4 text-center">
-  <h3>Enter teammate initials</h3>
-  <input type="text" class="form-control form-control-sm d-inline-block" id="new-initials" 
-    maxlength="2" style="width: 60px; text-transform: uppercase;" placeholder="AB" 
-    oninput="this.value = this.value.replace(/[^a-zA-Z]/g, '')" required>
-  <button id="add-teammate-btn" class="btn btn-primary ml-2">Add Teammate</button>
-</div>
 
-
-<div class="d-flex justify-content-center">
-<a href="voting.html" class="btn btn-primary btn-lg">Start Voting!</a>
+ <div class="d-flex justify-content-center">
+  <a href="voting.html" class="btn btn-primary btn-lg">Start Voting!</a>
 </div><br>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script type="module" src="team.js"></script>
+<script type="module" src="voteapp.js"></script>
 
 </body>
 </html>
