--- a/voting.html
+++ b/voting.html
@@ -5,9 +5,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
   <!--progress bar-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -51,7 +54,7 @@
 <div class="progress">
   <div class="progress-bar" role="progressbar" aria-valuenow="75"
   aria-valuemin="0" aria-valuemax="100" style="width:75%">
-    ☑ Step 2
+    ☑ Step 3
   </div>
 </div>
 
@@ -77,14 +80,31 @@
 </div>
 
 
- <div class="d-flex justify-content-center">
-  <a href="voting.html" class="btn btn-primary btn-lg">Start Voting!</a>
-</div><br>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script type="module" src="voteapp.js"></script>
+
+<div class="modal fade" id="voteModal" tabindex="-1" aria-labelledby="voteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="voteModalLabel">Vote</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <input type="text" id="voteInput" class="form-control" placeholder="Enter your vote">
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="submitVote" class="btn btn-success">Submit Vote</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Tally Votes Button -->
+<div class="text-center mt-4">
+  <button id="tally-votes" class="btn btn-success">Tally Votes</button>
+</div>
 
 </body>
 </html>
