Now PO can vote too

--- a/voting.html
+++ b/voting.html
@@ -67,7 +67,7 @@
 
     <!-- Product Owner Slot -->
     <div class="col-12 col-sm-8 offset-sm-2 text-center mb-4">
-      <div class="circle po-circle mx-auto" id="po-circle">PO</div>
+      <div class="circle po-circle mx-auto" id="po-circle" data-initials="PO">PO</div>
       <p class="mt-2">Product Owner</p>
     </div>
 
@@ -103,7 +103,7 @@
 
 <!-- Tally Votes Button -->
 <div class="text-center mt-4">
-  <button id="tally-votes" class="btn btn-success">Tally Votes</button>
+  <button id="tally-votes" class="btn btn-primary">Tally Votes</button>
 </div>
 
 </body>
