--- a/startgame.html
+++ b/startgame.html
@@ -69,7 +69,26 @@
       </div>
     </div>
   </div>
-  <br>
+
+  <!-- <div class="col-sm-4">
+  <h3>Choose a points system:</h3>
+
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="scoring" id="radioDays" value="days">
+    <label class="form-check-label" for="radioDays">Days</label>
+  </div>
+
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="scoring" id="radioFibonacci" value="fibonacci" checked>
+    <label class="form-check-label" for="radioFibonacci">Fibonacci</label>
+  </div>
+
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="scoring" id="radioTshirt" value="tshirt">
+    <label class="form-check-label" for="radioTshirt">T-shirt sizes</label>
+  </div>
+</div> -->
+<br>
 
   <div class="d-flex justify-content-center">
     <button type="submit" class="btn btn-primary btn-lg">Add your team</button>
@@ -102,6 +121,7 @@ window.onload = function () {
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="poApp.js"></script>
 
 </body>
 </html>
