--- a/voting.html
+++ b/voting.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -14,9 +13,6 @@
 
   <!--progress bar-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     
   <link rel="stylesheet" href="stylesheet.css">
@@ -45,10 +41,11 @@
 
 </head>
 <body>
-
-<div class="jumbotron text-center">
-  <h1>Cast your votes!</h1>
-  <p>The PO may change votes or kick teammates as discussed.</p>
+<div class="bg-white py-5 px-3 px-md-5 text-center shadow-sm rounded">
+  <div class="container">
+    <h1 class="display-6 display-md-4 fw-bold">Cast your votes</h1>
+    <p class="lead">Click on your icon to vote (or change) vote:</p>
+  </div>
 </div>
 
 <div class="progress">
@@ -56,7 +53,7 @@
   aria-valuemin="0" aria-valuemax="100" style="width:75%">
     ☑ Step 3
   </div>
-</div>
+</div><br>
 
 <div class="container">
   <div class="row" id="teammate-grid">
@@ -79,6 +76,10 @@
   </div>
 </div>
 
+<!-- Tally Votes Button -->
+<div class="text-center mt-4">
+  <button id="tally-votes" class="btn btn-primary">Tally Votes</button>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -101,10 +102,35 @@
   </div>
 </div>
 
-<!-- Tally Votes Button -->
-<div class="text-center mt-4">
-  <button id="tally-votes" class="btn btn-primary">Tally Votes</button>
+<!-- Results Modal -->
+<div class="modal fade" id="resultsModal" tabindex="-1" aria-labelledby="resultsModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h5 class="modal-title" id="resultsModalLabel">Tally Results</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+
+      <div class="modal-body">
+        <!-- Progress bar -->
+        <div class="progress mb-3">
+          <div class="progress-bar" role="progressbar" aria-valuenow="100"
+            aria-valuemin="0" aria-valuemax="100" style="width:100%">
+            ☑ Complete
+          </div>
+        </div>
+
+        <!-- Results message -->
+        <div id="resultsBody" class="text-center fs-5 fw-bold">
+          <!-- Average vote will be injected here -->
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
 
 </body>
 </html>
+
