Fixed user stories but teammates linger after unload

--- a/startgame.html
+++ b/startgame.html
@@ -24,7 +24,7 @@
 
 <div class="jumbotron text-center">
   <h1>Product owner</h1>
-  <p>Enter User Story & Decide Point System</p>
+  <p>Enter Your Initials & Decide Point System</p>
 </div>
 
 <div class="progress">
@@ -38,37 +38,13 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 mb-3">
       <h3>Enter your initials</h3>
       <input type="text" class="form-control form-control-sm" id="initials" 
       maxlength="2" style="width: 60px;" placeholder="AB" 
       oninput="this.value = this.value.replace(/[^a-zA-Z]/g, '')" required>
     </div>
 
-    <div class="col-sm-4">
-      <h3>Enter User Story:</h3>
-      <div class="form-group">
-      <label for="exampleFormControlTextarea1"><i>Written in canonical form</i></label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
-      </div>
-    </div>
-
-    <!-- <div class="col-sm-4">
-      <h3>Choose a points system:</h3>
-        <div class="form-check">
-        <input class="form-check-input" type="radio" class="btn-check" name="radioDefault" id="radioDefault1">
-        <label class="form-check-label" for="radioDefault1">Days</label>
-        </div>
-        <div class="form-check">
-        <input class="form-check-input" type="radio" class="btn-check" name="radioDefault" id="radioDefault1" checked>
-        <label class="form-check-label" for="radioDefault1">Fibonacci</label>
-        </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" class="btn-check" name="radioDefault" id="radioDefault2">
-        <label class="form-check-label" for="radioDefault2">T-shirt sizes</label>
-      </div>
-    </div>
-  </div> -->
 
   <div class="col-sm-4">
   <h3>Choose a points system:</h3>
