--- a/voting.html
+++ b/voting.html
@@ -4,17 +4,13 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
+  <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
 
   <!--progress bar-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    
   <link rel="stylesheet" href="stylesheet.css">
 
   <style>
@@ -22,7 +18,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background-color: #0d6efd; /* Bootstrap primary blue */
+    background-color: #0d6efd; 
     color: white;
     display: flex;
     align-items: center;
@@ -33,7 +29,7 @@
   }
 
   .po-circle {
-  background-color: #dc3545; /* bootstrap danger red or any color you want */
+  background-color: #dc3545;
   }
 </style>
     
@@ -57,7 +53,6 @@
 
 <div class="container">
   <div class="row" id="teammate-grid">
-    <!-- Full width centered heading -->
 
 <div id="story-section" class="mb-4">
   <h4>User Story</h4>
@@ -80,9 +75,7 @@
     </div>
 
     <!-- Teammate slots container -->
-    <!-- This should NOT be a .row because it's already inside one -->
     <div id="teammate-slots" class="d-flex flex-wrap justify-content-center px-5">
-      <!-- teammate circles will be appended here -->
     </div>
   </div>
 </div>
@@ -90,12 +83,18 @@
 <!-- Tally Votes Button -->
 <div class="text-center mt-4">
   <button id="tally-votes" class="btn btn-primary">Tally Votes</button>
+</div><br>
+
+<!--End game button-->
+<div>
+<button id="end-game" class="btn btn-danger">End Game</button>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script type="module" src="voteapp.js"></script>
 
+<!--Vote Modal-->
 <div class="modal fade" id="voteModal" tabindex="-1" aria-labelledby="voteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -132,12 +131,10 @@
           </div>
         </div>
 
-        <!-- Results message -->
+        <!-- Results container -->
         <div id="resultsBody" class="text-center fs-5 fw-bold">
-          <!-- Average vote will be injected here -->
         </div>
       </div>
-
     </div>
   </div>
 </div>
