Final working version

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!--Supress favicon error-->
+  <link rel="icon" href="data:,">
 
     
   <link rel="stylesheet" href="stylesheet.css">
@@ -17,7 +20,7 @@
 
   <style>
     div img {
-    width: 100px; /* shrink image */
+    width: 100px;
     height: auto;      
     display: block;    
     margin: 0 auto;    
@@ -43,24 +46,22 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Step 1</h3>
-      <p>Choose a PO</p>
-      <p>Your PO will enter user stories and choose the points style. Only the PO can change a vote or kick a teammate.</p>
+      <h3><b>Step 1</b></h3>
+      <p>Add your Product Owner.</p>
+      <p>Your PO will enter user stories & choose the point system. Only the PO can change a vote or kick a teammate.</p>
     </div>
     <div class="col-sm-4">
-      <h3>Step 2</h3>
-      <p>Assemble the team - take a seat at the table</p>
-      <p>And cast votes!</p>
+      <h3><b>Step 2</b></h3>
+      <p>Assemble your team - take a seat at the table!</p>
+      <p>And cast your votes!</p>
     </div>
     <div class="col-sm-4">
-      <h3>Step 3</h3>        
-      <p>Calculate the average vote and discuss as necessary!</p>
+      <h3><b>Step 3</b></h3>        
+      <p>Calculate estimation & discuss as needed!</p>
       <p>You can request a vote change, but only the PO can change your vote.</p>
     </div>
   </div>
 </div>
-
-<!-- <script type="module" src="app.js"></script> -->
 
 
 </body>
