--- a/assembleTeam.html
+++ b/assembleTeam.html
@@ -9,6 +9,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+  <!--Supress favicon error-->
+  <link rel="icon" href="data:,">
+
   <!--progress bar-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -45,7 +48,7 @@
 
 <div class="jumbotron text-center">
   <h1>Assemble Your Team</h1>
-  <p>Resize this responsive page to see the effect!</p>
+  <p>Enter teammate initials that are different from PO's</p>
 </div>
 
 <div class="progress">
