--- a/startgame.html
+++ b/startgame.html
@@ -8,6 +8,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+  <!--Supress favicon error-->
+  <link rel="icon" href="data:,">
+
   <!--progress bar-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -23,8 +26,8 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Product owner</h1>
-  <p>Enter Your Initials & Decide Point System</p>
+  <h1>Product Owner</h1>
+  <p>Enter Your Initials & Choose Point System</p>
 </div>
 
 <div class="progress">
@@ -69,9 +72,9 @@
   <div class="d-flex justify-content-center">
     <button type="submit" class="btn btn-primary btn-lg">Add your team</button>
   </div>
-
-  </form>
-</div>
+  </div>
+  </div>
+</form>
 
 <script>
 window.onload = function () {
@@ -94,7 +97,6 @@ window.onload = function () {
   });
 };
 </script>
-</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module" src="poApp.js"></script>
