--- a/voting.html
+++ b/voting.html
@@ -8,6 +8,9 @@
   <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!--Supress favicon error-->
+  <link rel="icon" href="data:,">
+
   <!--progress bar-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -92,10 +95,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script type="module" src="voteapp.js"></script>
-
 <!--Vote Modal-->
-<div class="modal fade" id="voteModal" tabindex="-1" aria-labelledby="voteModalLabel" aria-hidden="true">
+<div class="modal fade" id="voteModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -113,7 +114,7 @@
 </div>
 
 <!-- Results Modal -->
-<div class="modal fade" id="resultsModal" tabindex="-1" aria-labelledby="resultsModalLabel" aria-hidden="true">
+<div class="modal fade" id="resultsModal" tabindex="-1" aria-labelledby="resultsModalLabel">
   <div class="modal-dialog">
     <div class="modal-content">
 
@@ -139,5 +140,10 @@
   </div>
 </div>
 
+<script type="module" src="teamutil.js"></script>
+<script type="module" src="calculatevote.js"></script>
+<script type="module" src="voteapp.js"></script>
+
 </body>
+
 </html>
